// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryReducer should handle all defined error types: rejected types GET_HOSTS_INVENTORY_GUESTS_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "hostsInventory": {},
    "instancesGuests": {},
    "instancesInventory": {},
    "subscriptionsInventory": {},
    "tabs": {},
  },
  "type": "GET_HOSTS_INVENTORY_GUESTS_RHSM_REJECTED",
}
`;

exports[`InventoryReducer should handle all defined error types: rejected types GET_HOSTS_INVENTORY_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "instancesGuests": {},
    "instancesInventory": {},
    "subscriptionsInventory": {},
    "tabs": {},
  },
  "type": "GET_HOSTS_INVENTORY_RHSM_REJECTED",
}
`;

exports[`InventoryReducer should handle all defined error types: rejected types GET_INSTANCES_INVENTORY_GUESTS_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {},
    "instancesGuests": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "instancesInventory": {},
    "subscriptionsInventory": {},
    "tabs": {},
  },
  "type": "GET_INSTANCES_INVENTORY_GUESTS_RHSM_REJECTED",
}
`;

exports[`InventoryReducer should handle all defined error types: rejected types GET_INSTANCES_INVENTORY_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {},
    "instancesGuests": {},
    "instancesInventory": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "subscriptionsInventory": {},
    "tabs": {},
  },
  "type": "GET_INSTANCES_INVENTORY_RHSM_REJECTED",
}
`;

exports[`InventoryReducer should handle all defined error types: rejected types GET_SUBSCRIPTIONS_INVENTORY_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {},
    "instancesGuests": {},
    "instancesInventory": {},
    "subscriptionsInventory": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "tabs": {},
  },
  "type": "GET_SUBSCRIPTIONS_INVENTORY_RHSM_REJECTED",
}
`;

exports[`InventoryReducer should handle all defined fulfilled types: fulfilled types GET_HOSTS_INVENTORY_GUESTS_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {
      "data": {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "hostsInventory": {},
    "instancesGuests": {},
    "instancesInventory": {},
    "subscriptionsInventory": {},
    "tabs": {},
  },
  "type": "GET_HOSTS_INVENTORY_GUESTS_RHSM_FULFILLED",
}
`;

exports[`InventoryReducer should handle all defined fulfilled types: fulfilled types GET_HOSTS_INVENTORY_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {
      "data": {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "instancesGuests": {},
    "instancesInventory": {},
    "subscriptionsInventory": {},
    "tabs": {},
  },
  "type": "GET_HOSTS_INVENTORY_RHSM_FULFILLED",
}
`;

exports[`InventoryReducer should handle all defined fulfilled types: fulfilled types GET_INSTANCES_INVENTORY_GUESTS_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {},
    "instancesGuests": {
      "data": {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "instancesInventory": {},
    "subscriptionsInventory": {},
    "tabs": {},
  },
  "type": "GET_INSTANCES_INVENTORY_GUESTS_RHSM_FULFILLED",
}
`;

exports[`InventoryReducer should handle all defined fulfilled types: fulfilled types GET_INSTANCES_INVENTORY_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {},
    "instancesGuests": {},
    "instancesInventory": {
      "data": {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "subscriptionsInventory": {},
    "tabs": {},
  },
  "type": "GET_INSTANCES_INVENTORY_RHSM_FULFILLED",
}
`;

exports[`InventoryReducer should handle all defined fulfilled types: fulfilled types GET_SUBSCRIPTIONS_INVENTORY_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {},
    "instancesGuests": {},
    "instancesInventory": {},
    "subscriptionsInventory": {
      "data": {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "tabs": {},
  },
  "type": "GET_SUBSCRIPTIONS_INVENTORY_RHSM_FULFILLED",
}
`;

exports[`InventoryReducer should handle all defined pending types: pending types GET_HOSTS_INVENTORY_GUESTS_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
    "hostsInventory": {},
    "instancesGuests": {},
    "instancesInventory": {},
    "subscriptionsInventory": {},
    "tabs": {},
  },
  "type": "GET_HOSTS_INVENTORY_GUESTS_RHSM_PENDING",
}
`;

exports[`InventoryReducer should handle all defined pending types: pending types GET_HOSTS_INVENTORY_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
    "instancesGuests": {},
    "instancesInventory": {},
    "subscriptionsInventory": {},
    "tabs": {},
  },
  "type": "GET_HOSTS_INVENTORY_RHSM_PENDING",
}
`;

exports[`InventoryReducer should handle all defined pending types: pending types GET_INSTANCES_INVENTORY_GUESTS_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {},
    "instancesGuests": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
    "instancesInventory": {},
    "subscriptionsInventory": {},
    "tabs": {},
  },
  "type": "GET_INSTANCES_INVENTORY_GUESTS_RHSM_PENDING",
}
`;

exports[`InventoryReducer should handle all defined pending types: pending types GET_INSTANCES_INVENTORY_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {},
    "instancesGuests": {},
    "instancesInventory": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
    "subscriptionsInventory": {},
    "tabs": {},
  },
  "type": "GET_INSTANCES_INVENTORY_RHSM_PENDING",
}
`;

exports[`InventoryReducer should handle all defined pending types: pending types GET_SUBSCRIPTIONS_INVENTORY_RHSM 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {},
    "instancesGuests": {},
    "instancesInventory": {},
    "subscriptionsInventory": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
    "tabs": {},
  },
  "type": "GET_SUBSCRIPTIONS_INVENTORY_RHSM_PENDING",
}
`;

exports[`InventoryReducer should handle specific defined types: defined type CLEAR_INVENTORY_GUESTS 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {},
    "instancesGuests": {
      "lorem": {},
    },
    "instancesInventory": {},
    "subscriptionsInventory": {},
    "tabs": {},
  },
  "type": "CLEAR_INVENTORY_GUESTS",
}
`;

exports[`InventoryReducer should handle specific defined types: defined type SET_INVENTORY_TAB 1`] = `
{
  "result": {
    "hostsGuests": {},
    "hostsInventory": {},
    "instancesGuests": {},
    "instancesInventory": {},
    "subscriptionsInventory": {},
    "tabs": {
      "lorem": 1,
    },
  },
  "type": "SET_INVENTORY_TAB",
}
`;
